# ChangeLog for app-laptop/tlp
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  07 Feb 2015; Andre Erdmann <dywi@mailerd.de> tlp-9999.ebuild:
  Add CONFIG_PM_RUNTIME to the list of required kernel options (CONFIG_CHECK).

*tlp-0.7-r1 (07 Feb 2015)
  07 Feb 2015; Andre Erdmann <dywi@mailerd.de> +tlp-0.7-r1.ebuild,
  tlp-9999.ebuild:
  Install bashcomp alias symlinks, required for autoloading of completion
  files (in >=app-shells/bash-completion-2.1-r90).

  01 Feb 2015; Andre Erdmann <dywi@mailerd.de> -tlp-0.5.ebuild,
  -tlp-0.5-r2.ebuild:
  Remove old ebuilds.

*tlp-0.7 (01 Feb 2015)
  01 Feb 2015; Andre Erdmann <dywi@mailerd.de> +tlp-0.7.ebuild:
  Latest upstream release.

  01 Feb 2015; Andre Erdmann <dywi@mailerd.de> tlp-0.5.ebuild,
  tlp-0.5-r2.ebuild tlp-0.6-r1.ebuild:
  Fix $LICENSE of tpacpi-bat (GPL-3 => GPL-3+).

  01 Feb 2015; Andre Erdmann <dywi@mailerd.de> tlp-9999.ebuild:
  Update openrc init script (wrt bluetooth/NetworkManager, and USE=deprecated);
  Install COPYING, AUTHORS; Fix $LICENSE of tpacpi-bat (GPL-3 => GPL-3+).

  14 Nov 2014; Andre Erdmann <dywi@mailerd.de> tlp-9999.ebuild:
  Also recommended SENSORS_CORETEMP kernel config option.

  14 Nov 2014; Andre Erdmann <dywi@mailerd.de> tlp-9999.ebuild:
  Use global "bluetooth" USE flag for pulling in optional bluetooth
  dependencies.

  14 Nov 2014; Andre Erdmann <dywi@mailerd.de> tlp-9999.ebuild:
  Depend on x86_energy_perf_policy, provided by either
  sys-power/linux-x86-power-tools or sys-apps/linux-misc-apps.

*tlp-0.6-r1 (09 Oct 2014)
  09 Oct 2014; Andre Erdmann <dywi@mailerd.de> +tlp-0.6-r1.ebuild,
  -tlp-0.6.ebuild, tlp-9999.ebuild
  Fix installation of openrc script, github issue #6 (dbordak)

*tlp-0.6 (07 Oct 2014)

  07 Oct 2014; Andre Erdmann <dywi@mailerd.de> +tlp-0.6.ebuild, tlp-9999.ebuild
  Latest upstream release.
  Added runtime dep on sys-apps/util-linux (though part of the system set).
