@@ -4,10 +4,12 @@ AUX tlp-init.openrc-r1 574 SHA256 b4ae03be2e7b88f9595358b30811051c5373c71cbd771a
 DIST tlp-0.6.tar.gz 58141 SHA256 31d05d249aa83a6e43e94cee9f307f37c59934bbf7a37a87adf05cf74073cfe5 SHA512 fc122079795f7711b3f1546832ac644f17a386185e0b9bd86d16687ac16e33b819aebee9613c83f06b462690f10a3213fe927f8ce2796f7156dd2ced825078e6 WHIRLPOOL fafd0be1bf40991c1cf04e2cc69b5f123ad1dd5e04d19b6f0ceb27b6c8eff9c903f6dd4f435d1420da2bedee587d54abedd9fe29a4285faba4dffeba7e4ab2cb
 DIST tlp-0.7.tar.gz 65106 SHA256 bd313f478f897a658f2ca7db9665b8ce6796431b952f7df9aa80e59072cea4ea SHA512 134f3ff87492240413129b5de98ec295457c4e47560c16e95c08598e28af3737d6de5b1132b3d4ef7c4c9535a33d7ea470982ae921e37190e9a21ed0a13a0446 WHIRLPOOL 423da9fef7052d665744ff43c4e2bca48898222f23af324a5f3b34b757ecec11d67ec2cac71b1001a3cb1b5fada40798a6491ac55fd6faa5ee0c9fcc26e102fa
 DIST tlp-gentoo-patches-0.6.tar.xz 2676 SHA256 da9532945c19d9be7d8b55e4d22fba6101cab2385f591797b3e0a2eca869e9ff SHA512 b9ad6c34781f27e8619af1fa119e2de7034fab415935390e759f127d018a747c16a6da33ffb4a2d1f435874877d454ce1fb22614e90e424a4525943aaf891a4b WHIRLPOOL f665bd0926756b028a5b3d7f6099813dc849fd08e6cfa6401737607a382d0d5a02d87827b93d20fd77f02f4259d77cab9061b0af104780f2c2dfe68f119c7073
+DIST tlp-gentoo-patches-0.7-r2.tar.xz 4896 SHA256 1d7a06f55029c0fb722cc5bf7c0d1c1c48b42683f125be1c9a9cbdc021d7fc8f SHA512 4f964528f842872e1898212ca5be88ee494078bac2932cc46f8ea569490fcb72bcbecae14286181796c30b25e32cdf0ff490320692edf7ce6d3c8fc59c015d23 WHIRLPOOL 673739fe43eac80f1bacbd435c0ad95bbc236be59edd06aeecea2dd1d74582502602f9705b679aa1cfa416748762d5ca579deb715e85ca5e27f7b3b3853d5038
 DIST tlp-gentoo-patches-0.7.tar.xz 2648 SHA256 362f3b7d7c04ef15cde43cc287b0496d318b4af5846c7173ba2978aa659410d1 SHA512 5ae9bdefedf571c5ca03b40b386e522603f516293f1009891a40e0ed80e50c867fe59128fffe0e00c61ad8042dac24ca680019ab93f4da8748a1a74916f34f69 WHIRLPOOL 406f685f922acad92fef76e59852a611d5fe3611abde2e0cee164377005fc5ca18740410a21183c385391212e5e5ba1378e0512e873d7b7fbb043eb29a3dda7d
 EBUILD tlp-0.6-r1.ebuild 5189 SHA256 bf3dd43bb581179d5b072441c3ec8f2f72d2ca3cc10e3a1ffa68c1daf2d79053 SHA512 8279d364710bec2846cc5141fc952f78a764c819818e5ee175d0649f20653acd02c66319124b34c263ab870a924cc6918df21c0b4ece02a0b9d1167f90caae6e WHIRLPOOL 20cf684227afc89a18774e871e22efe4e357eb6b08ca6c1be5f622cc57c504c05c29f2d2360c571c94dae05ac1721525a6c115e89c39dc949be04b8ac366379c
 EBUILD tlp-0.7-r1.ebuild 5929 SHA256 a606d67c78425bd08b589efee5b064d9403174ba10d6126ba128c777b1ad8632 SHA512 8ba265aa4c5e20e8dd1c1073c5c942426d6214a2f73b9245e925afd139f61013d028d71f6bf142bdbecb342f1cb303f3aeadae9ad1a4b5f22bac459bd63de2f5 WHIRLPOOL 618c65996207267c3fb85e387f4b6fb0924149c1ba92779028aa00f2d81b5614af89a53d61299b33f5a8a845c7cc7dbeeae4b9c79222b48b05ec8d3bd6fd405f
+EBUILD tlp-0.7-r2.ebuild 6006 SHA256 2d2a1e1fcc8ded6f94338ef58c2157eab7eac5f1ca51f0cbf4957afaf0680c59 SHA512 d11d03f477530c65314e022d43fb2241ff82d8cf95769009776365d98a49c58029c93aea64da889356b3ec547aeb850b3744db5f395025d430582b041474455d WHIRLPOOL a498694fe9907d3c8755b6776edd03ec1b35cfdbc6e9fc82c4ca0a932c9e1793d17dbeef2e1b221866ed77cfc2d761c56410e8d291f745188eb70690f89a334a
 EBUILD tlp-0.7.ebuild 5872 SHA256 157e26abfc58b037d68836e9702c294fe9dad21b98c295cdf72f909b489c858c SHA512 9d975372364e870d83c90e7584a3a7af4be680b9ee15d7cf31427fab54df79e47f98c3317fb05e562101f1f3ba4bc28e6facf28fcc28cfd619972d3507cbc046 WHIRLPOOL 5fd78a09f3730ad6d55df5fdef609336140d096062bc4e35b9b7c5357b5d894165aceca006a76e160982c3a217d369d1bb825910ddada044a60de4aeed0cc0c0
-EBUILD tlp-9999.ebuild 6647 SHA256 dd8858e0c494f2ae83a7a8a52690e86488c847cbe903c291d71c3fdfbf144a14 SHA512 1736aa9e25407065bd92838097bdab47107858894995baa4126b90482b79cca9b3aeb946493ff1cb7dbc77ed5ea3b106f9e4550f463069fc09f2dfd484078dfc WHIRLPOOL 870f96bce0fb471f315363afe1f0ec7cfd4eca6c6cbe463191528b5100c286a4293054ad0aa5718f0a3e2480cee9d6a2dae820f40d56a0d106ba7e430a2ead1b
-MISC ChangeLog 11799 SHA256 9310afb4fcc259a63053fa637b809a1d0921f900cd8d5199e69e0cabcb8f5a5d SHA512 e4db19ee2932abaf94b89c4fdb845174d40f0927707ad52930b8c1832ff0445f04103eef6415e9f7fe156405238913707796a8501f1a85d2858e2ed77ec377dc WHIRLPOOL e069bc99cd7bafbbb41602ccab793f897633aeb83ed976bc0ec2901e2dd084d0c5eacdf5e1d9610f9592e6943cbd8cc85ed0249c7a3e0302fd8b8d49bebe552f
+EBUILD tlp-9999.ebuild 6623 SHA256 4addbf3da55d39ed875eeec3cc2fe9ce2524606c4dbcd9595b3f602cb4669999 SHA512 c8a079b695c41194d0bfb90a270ddf81dcc774e1bbfb10789174bdbe6aac32f2c0c26d4b032bb34142e1625b558015eff3bb8d3509ccc3b8282c3b79f4d6efc1 WHIRLPOOL b189f277f2e295f275fd6e7bf2b62bb81b03a436aa66bb117d7e3551a91679686c53c90a0299a21547b130ab59d306f099e6adbe4026d220e33185ca6023a1a7
+MISC ChangeLog 12131 SHA256 c5e0dcb5b6524990e971da9b0960e6a082421d2f4f4b3252f88f74d23d8db8e5 SHA512 b3f701862ed63a1848b6057bb6a9e2a14d044861707c5f23769d5e159b434431340ed0cf6825d34add7cddb626401e1f0895fa598b015287c11f9108a92b3d61 WHIRLPOOL cb1432af26dbe6b4feb5873104a2cd4b303ec434c719751225eb81d7b14887158d52371d30f65f79c55e6d55a457771c134f714d69c11328436676308f8fac96
 MISC metadata.xml 2089 SHA256 1e283f1d356f8c38c0f95a16bf3dc7a769834d7a0d9ba9986c327917afc1cfb6 SHA512 e5cd0ca0f6d16c601f83755ac0ef9d509aa454a802c867a4550631130754c719bb1de36ce2f3283ab8bf4ca9177358260d7d7005a15fcaa64a580e681fc7229b WHIRLPOOL 64f5fd3213fa0552d8b5128a06a78e60c04111b50bacbff57dbaa1a92e2a47f51858dc5f6cd6735c5f0be61ab6c10d8c4c9ae7872bc21a4f6e34d14c03edfacc
