@@ -2,7 +2,16 @@
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
-  07 Feb 2015; Andre Erdmann <dywi@mailerd.de> tlp-9999.ebuild:
+* tlp-0.7-r2 (30 Mar 2015)
+  30 Mar 2015; Andre Erdmann <dywi@mailerd.de> +tlp-0.7-r2.ebuild
+  Add upstream patches for Issues #123, #124
+  and add kernel config check for CONFIG_PM.
+
+  30 Mar 2015; Andre Erdmann <dywi@mailerd.de> tlp-9999.ebuild:
+  CONFIG_PM_RUNTIME has been removed in linux 3.19,
+  check for CONFIG_PM instead.
+
+  10 Feb 2015; Andre Erdmann <dywi@mailerd.de> tlp-9999.ebuild:
   Add CONFIG_PM_RUNTIME to the list of required kernel options (CONFIG_CHECK).
 
 *tlp-0.7-r1 (07 Feb 2015)
